07092013 -> jonnyboy -> updated start.php to latest patch
07072013 -> jonnyboy -> added update_relases run when have exceeded limits in seq
						updated all python scripts, put closing stuffin in main(), removed thread deamon's was causing shutdown issues with 2.*
						added gid to grabzbs and import threaded scripts, still need to add to non threaded
						updated monitor predb to match the other totals, fixed typo in populate_nzb_guid.php
						tmux - removed unneeded/unused timers
07072013 -> Miatrix  -> Added populate_nzb_guid.php in the misc/testing/DB_scripts folder to update existing releases with the guid
07072013 -> Miatrix  -> updated the creation of releases to populate the nzg_guid column with a md5 hash based on the 1st post.  This will allow possible spotnab integration at a later date.
07072013 -> jonnyboy -> updated monitor pane for requestID
						integrated threaded requestID into releases.php, no need to run separate python script
						fixed testing/nzb-import.php not deleting the nzbs
						fixed skipping releases when importing by filename
						added more rss feeds for predb.me
07062013 -> jonnyboy -> fixed patch
						Added threaded requestID for initial pull
07062013 -> Miatrix  -> Added Request ID Lookup.  This looks up requests from the URL we provide to fix naming where possible.  
						This is very usefull for pron, but helps sometimes on tv/movies/console releases.
07062013 -> jonnyboy -> removed remove stale folders from threaded pp additional, wrong place
07052013 -> jonnyboy -> fixed bug in tmux-edit and monitor
						fixed bug in postprocess
						a little cleanup, removed optimize/patch from tmux-edit
						added formatting to numbers in safe backfill
						tmux - split pp addtional and pp nfo
						added partrepair threaded
						added remove stale folders from threaded pp additional
07052013 -> jonnyboy -> really fixed it, updated tmux-edit with an example of the formula used