@@ -1,4 +1,6 @@
-07092013 -> jonnyboy -> updated start.php to latest patch
+07092013 -> jonnyboy -> added nzbstatus check for gid creation
+						added db connect string to start of loop in monitor.php, should help the with disabled by running issues
+						updated start.php to latest patch
 07072013 -> jonnyboy -> added update_relases run when have exceeded limits in seq
 						updated all python scripts, put closing stuffin in main(), removed thread deamon's was causing shutdown issues with 2.*
 						added gid to grabzbs and import threaded scripts, still need to add to non threaded
